Noe ready yet:

[ Solve problem with getpeername ]
[ All parameters should contain section "How can be used" in the Manual]
[ PHP to support non-numerci values ]
[ Support for system[proccount] on FreeBSD ]
[ Patches for PostgreSQL ]
[ Common parser (cfg.c) ]

Changes for 1.0beta3:

 - do not refresh screen if displayed all triggers (Alexei)
 - fixed "Send message to" in actions.html (Alexei)
 - support for experimental parameter NoTimeWait (Alexei)
 - diskfree[*] to return free disk space in Kb (Alexei)
 - support for non-numeric parameters (Alexei)
 - common parser function for configuration files (Alexei)
 - added file include/cfg.h and include/cfg.c (Alexei)
 - support for system[uptime] on FreeBSD (Alexei)
 - support for kern[maxfiles] on FreeBSD (Alexei)
 - support for kern[maxproc] on FreeBSD (Alexei)
 - zabbix_trapperd cannot be ran as root (Alexei)
 - added table history_str (Alexei)
 - added column value_type to table items (Alexei)
 - removed(?) support for automake (Alexei)
 - partial support for automake (Alexei)
 - parent process will terminate childs if one of the childs died
 (Alexei)
 - support for PidFile for zabbix_agentd,zabbix_suckerd and
 zabbix_trapperd (Alexei)
 - Zabbix processes will show statuses for ps (FreeBSD,...) (Alexei)
 - changes in AUTHORS (Alexei)
 - added support for IP addresses for SNMP-enabled hosts.
 Thanks to Denis Ustimenko. (Alexei) 
 - commented #define TEST_PARAMETERS in zabbix_agent.c (Alexei)
 - proc_cnt[apache] was changed to proc_cnt[httpd] (Alexei)

Changes for 1.0beta2:

 - changes in manual.lyx (Alexei)
 - added parameter ListenPort to zabbix_agentd and zabbix_trapperd
 (Alexei)
 - all *.html documents were renamed to *.php (Alexei)
 - clean compilation on HP-UX 11.xx (Alexei)
 - change host status to Unreachable if agent drops connection (Alexei)
 - added #include <time.h> into db.h (Alexei)
 - added support for connection to MySQL via Unix socket. Thanks to Arturs
 Aboltins (Alexei)