@@ -28,6 +28,11 @@ DebugLevel=2
 
 PidFile=/var/tmp/zabbix_agentd.pid
 
+# Spend no more than Timeout seconds on processing
+# Must be between 1 and 30
+
+Timeout=3
+
 ##### Experimental options. Use with care ! #####
 
 # Get rid of sockets in TIME_WAIT state
