@@ -25,6 +25,10 @@ HousekeepingFrequency=1
 
 DebugLevel=2
 
+# Specifies how long we wait for agent (in sec)
+# Must be between 1 and 30 
+Timeout=5
+
 # Name of PID file
 
 PidFile=/var/tmp/zabbix_suckerd.pid
